# riscv-to-evm

./: addi.S  base.S  build-c.sh  compile-tests.sh  entry.S  exit.S  fib.c  fib.s  global.d.ts  incr.S  instructionParser.ts  linker.ld  load.ts  nop.S  opcodes.ts  package.json  prepare.sh  println.S  run-tests.sh  simple.S  test  test.c  test.debug  test.profile  test.ramimage  test.s  test.text  tsconfig.json  types.ts  util.ts  v2.ts  v3.ts
rust-skeleton/: Cargo.toml  build.sh  linker.ld  riscv32i-unknown-continue-elf.json  riscv64im-unknown-evm-elf.json
rust-skeleton/src/: main.rs
tests/: add  add.S  add.profile  add.ramimage  add.text  addi  addi.S  addi.profile  addi.ramimage  addi.text  and  and.S  and.profile  and.ramimage  and.text  andi  andi.S  andi.profile  andi.ramimage  andi.text  auipc  auipc.S  auipc.profile  auipc.ramimage  auipc.text  beq  beq.S  beq.profile  beq.ramimage  beq.text  bge  bge.S  bge.profile  bge.ramimage  bge.text  bgeu  bgeu.S  bgeu.profile  bgeu.ramimage  bgeu.text  (+177 more)
tests-base/: create.sh  riscv_test.h
tests-logs/: add  add.S  add.profile  addi  addi.S  addi.profile  and  and.S  and.profile  andi  andi.S  andi.profile  auipc  auipc.S  auipc.profile  beq  beq.S  beq.profile  bge  bge.S  bge.profile  bgeu  bgeu.S  bgeu.profile  blt  blt.S  blt.profile  bltu  bltu.S  bltu.profile  bne  bne.S  bne.profile  div  div.S  div.profile  divu  divu.S  divu.profile  j  (+95 more)
